Visor slide added

--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ blockquote p {
      <li>Caché con capas más solicitadas</lI>
     </ul>
 </section>
+<section style="text-align:center; padding:3em 6em;">
+    <h3>Visor</h3>
+    <img src="img/visor.png" height="70%"/>
+</section>
 
 <script src="js/d3.v4.min.js"></script>
 <script src="js/stack.v2.js"></script>
