--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ blockquote p {
     </ul>
 </section>
 <section style="text-align:center; padding:3em 6em;">
-    <h3>Visor</h3>
-    <img src="img/visor.png" height="70%"/>
+    <a href="example"><h3>Visor</h3>
+    <img src="img/visor.png" height="70%"/></a>
 </section>
 
 <script src="js/d3.v4.min.js"></script>
